@@ -72,8 +72,9 @@ Sadako <Sadako@hamiltonshells.ca>
 tczy <cy@wre.ath.cx>
         elvi: bing
 
-S. <fittabile@lifegate.it>
-        elvi: acronym, gcache
+Simone Fittabile <fittabile@lifegate.it>
+        elvi: acronym, gcache, jamendo
+	plus patches.
 
 Micah Anderson <micah@debian.org>
         various patches
