@@ -210,6 +210,7 @@ gutenberg       -- Search for books on Project Gutenberg (gutenberg.org)
 happypenguin    -- Search the Linux Game Tome (www.happypenguin.org)
 imdb            -- Search the Internet Movie Database (www.imdb.com)
 ixquick         -- Search the web using ixquick (www.ixquick.com)
+jamendo         -- Search Jamendo: free music with Creative Commons licenses (www.jamendo.com)
 javasun         -- Search Java API docs (java.sun.com)
 l1sp            -- Search lisp documentation
 lastfm          -- Search last.fm
