@@ -55,6 +55,7 @@ elvi.1sr.gz @mandir@/man1/gutenberg.1sr.gz
 elvi.1sr.gz @mandir@/man1/happypenguin.1sr.gz
 elvi.1sr.gz @mandir@/man1/imdb.1sr.gz
 elvi.1sr.gz @mandir@/man1/ixquick.1sr.gz
+elvi.1sr.gz @mandir@/man1/jamendo.1sr.gz
 elvi.1sr.gz @mandir@/man1/javasun.1sr.gz
 elvi.1sr.gz @mandir@/man1/lastfm.1sr.gz
 elvi.1sr.gz @mandir@/man1/leodict.1sr.gz
